--- a/src/main/resources/public/organizer_concert.html
+++ b/src/main/resources/public/organizer_concert.html
@@ -19,7 +19,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">Організатори</button>
                         <div class="dropdown-content">
-                            <a href ="title.html">Титульна сторінка</a>
+                            <a href ="index.html">Титульна сторінка</a>
                             <a href="artist.html">Артисти</a>
                             <a href ="artist_genre.html">Жанри артиста</a>
                             <a href ="artist_and_impresario.html">Імпресаріо артистів</a>
