--- a/src/main/resources/public/artist_genre.html
+++ b/src/main/resources/public/artist_genre.html
@@ -18,7 +18,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">Жанри артистів</button>
                         <div class="dropdown-content">
-                            <a href ="title.html">Титульна сторінка</a>
+                            <a href ="index.html">Титульна сторінка</a>
                             <a href="artist.html">Артисти</a>
                             <a href ="artist_and_impresario.html">Імпресаріо артистів</a>
                             <a href ="cinema.html">Кінотеатри</a>
