--- a/src/main/resources/public/cinema.html
+++ b/src/main/resources/public/cinema.html
@@ -16,7 +16,7 @@
                 <div class="dropdown">
                     <button class="dropbtn">Кінотеатри</button>
                     <div class="dropdown-content">
-                        <a href ="title.html">Титульна сторінка</a>
+                        <a href ="index.html">Титульна сторінка</a>
                         <a href="artist.html">Артисти</a>
                         <a href ="artist_genre.html">Жанри артиста</a>
                         <a href ="artist_and_impresario.html">Імпресаріо артистів</a>
