--- a/src/main/resources/public/contest_dates.html
+++ b/src/main/resources/public/contest_dates.html
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Концертні площадки</title>
+    <title>Культурні палаци</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
 
+
 </head>
 <body ng-app = "demo">
-
-<div class="container" ng-controller = "ConcertHallCtrl as concertHallCtrl">
+<div class="container" ng-controller = "CulturePalaceCtrl as culturePalaceCtrl">
     <div class="row">
         <div class="col-md12">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <div class="dropdown">
-                        <button class="dropbtn">Концертні площадки</button>
+                        <button class="dropbtn">Палаци культури (запит)</button>
                         <div class="dropdown-content">
                             <a href ="index.html">Титульна сторінка</a>
                             <a href="artist.html">Артисти</a>
@@ -24,6 +24,7 @@
                             <a href ="artist_and_impresario.html">Імпресаріо артистів</a>
                             <a href ="cinema.html">Кінотеатри</a>
                             <a href ="cinema_movies.html">Фільми</a>
+                            <a href ="concert_hall.html">Концертні площадки</a>
                             <a href ="concert_in_hall.html">Концерти</a>
                             <a href ="contest_in_palace.html">Конкурси</a>
                             <a href ="contest_results.html">Результати конкурсів</a>
@@ -35,40 +36,33 @@
                             <a href ="theatre_performance.html">Виступи</a>
                         </div>
                     </div>
-                    <div class="dropdown">
-                        <button class="dropbtn" style="margin-left: 0">Запити</button>
-                        <div style="min-width: 400px;" class="dropdown-content">
-                            <a href="" data-toggle="modal" data-target="#selectByCapacity">Список площадок із вказаною місткістю (більше або дорівнює)</a>
-                            <a href="concert_dates.html" >Список концертних площадок та дати проведення заходів протягом вказаного періоду</a>
-                        </div>
-                    </div>
                 </div>
                 <div class="panel-body">
                     <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>&#128273ІД</th>
-                    <th>Назва</th>
-                    <th>Адреса</th>
-                    <th>Місткість</th>
-                    <th class="headerWidth"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal">✚</button></th>
-                </tr>
-            </thead>
+                        <thead>
+                        <tr>
+                            <th>Назва</th>
+                            <th>Адреса</th>
+                            <th>Місткість</th>
+                            <th>Дата проведення конкурсу</th>
+                            <th class="headerWidth"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal" style="align-self:center">✚</button></th>
+                        </tr>
+                        </thead>
 
-            <tbody>
+                        <tbody>
 
-            <tr ng-repeat = "item in concertHalls">
-                <td>{{item.id}}</td>
-                <td>{{item.name}}</td>
-                <td>{{item.address}}</td>
-                <td>{{item.capacity}}</td>
-                <td>
-                    <button id="update" ng-click="concertHallCtrl.startUpdateConcertHall(item.id, item.name, item.address, item.capacity)" class="btn-warning" data-toggle="modal" data-target="#editModal"><span style="font-size: 18px">✏</span></button>
-                    <button id="delete" ng-click="concertHallCtrl.deleteConcertHall(item.id)" class="btn-danger">❌</button>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                        <tr ng-repeat = "item in culturePalaces">
+                            <td>{{item.culturePalace.name}}</td>
+                            <td>{{item.culturePalace.address}}</td>
+                            <td>{{item.culturePalace.capacity}}</td>
+                            <td>{{item.date}}</td>
+                            <td>
+                                <button id="update" ng-click="culturePalaceCtrl.startUpdateCulturePalace(item.culturePalace.id, item.culturePalace.name, item.culturePalace.address, item.culturePalace.capacity)" class="btn-warning" data-toggle="modal" data-target="#editModal"><span style="font-size: 18px">✏</span></button>
+                                <button id="delete" ng-click="culturePalaceCtrl.deleteCulturePalace(item.id)" class="btn-danger">❌</button>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
@@ -83,16 +77,16 @@
                     <h4 class="modal-title">Додавання</h4>
                 </div>
                 <div class="modal-body">
-                    <input class="data" type="text" id="ConcertHallName" name="ConcertHallName" placeholder="Назва" title="Назва"/> <br>
+                    <input class="data" type="text" id="CulturePalaceName" name="CulturePalaceName" placeholder="Назва" title="Назва"/> <br>
                     <span class="error" style="color: #c00000; text-align: left; font-size: 14px" id="wrongName"></span><br>
-                    <input class="data" type="text" id="ConcertHallAddress" name="ConcertHallAddress" placeholder="Адреса" title="Адреса" /> <br>
+                    <input class="data" type="text" id="CulturePalaceAddress" name="CulturePalaceAddress" placeholder="Адреса" title="Адреса" /> <br>
                     <span class="error" style="color: #c00000; text-align: left; font-size: 14px" id="wrongAddress"></span><br>
-                    <input class="data" type="number" min="1" id="ConcertHallCapacity" name="ConcertHallCapacity" placeholder="Місткість" title="Розмір екрану" /> <br>
+                    <input class="data" type="number" min="1" id="CulturePalaceCapacity" name="CulturePalaceCapacity" placeholder="Місткість" title="Розмір екрану" /> <br>
                     <span class="error" style="color: #c00000; text-align: left; font-size: 14px" id="wrongCapacity"></span><br>
 
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-default" id="createConcertHallButton" ng-click="concertHallCtrl.createConcertHall()">Створити</button>
+                    <button class="btn btn-default" id="createCulturePalaceButton" ng-click="culturePalaceCtrl.createCulturePalace()">Створити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
@@ -109,16 +103,15 @@
                     <h4 class="modal-title">Редагування</h4>
                 </div>
                 <div class="modal-body">
-                    <input class="data" type="text" id="updateConcertHallName" name="updateConcertHallName" placeholder="Назва" title="Назва"/> <br>
+                    <input class="data" type="text" id="updateCulturePalaceName" name="CulturePalaceName" placeholder="Назва" title="Назва"/> <br>
                     <span class="error" style="color: #c00000; text-align: left; font-size: 14px" id="editWrongName"></span><br>
-                    <input class="data" type="text" id="updateConcertHallAddress" name="updateConcertHallAddress" placeholder="Адреса" title="Адреса" /> <br>
+                    <input class="data" type="text" id="updateCulturePalaceAddress" name="CulturePalaceAddress" placeholder="Адреса" title="Адреса" /> <br>
                     <span class="error" style="color: #c00000; text-align: left; font-size: 14px" id="editWrongAddress"></span><br>
-                    <input class="data" type="number" min="1" id="updateConcertHallCapacity" name="updateConcertHallCapacity" placeholder="Місткість" title="Розмір екрану" /> <br>
+                    <input class="data" type="number" min="1" id="updateCulturePalaceCapacity" name="CulturePalaceCapacity" placeholder="Місткість" title="Розмір екрану" /> <br>
                     <span class="error" style="color: #c00000; text-align: left; font-size: 14px" id="editWrongCapacity"></span><br>
-
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-default" id="editConcertHallButton" ng-click="concertHallCtrl.updateConcertHall()">Змінити</button>
+                    <button class="btn btn-default" id="editCulturePalaceButton" ng-click="culturePalaceCtrl.updateCulturePalace()">Змінити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
@@ -126,42 +119,23 @@
         </div>
     </div>
 
-    <div id="selectByDateGeneral" class="modal fade" role="dialog">
+    <div id="selectDates" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Вибір дати</h4>
+                    <h4 class="modal-title">Вибір періоду</h4>
                 </div>
                 <div class="modal-body">
-                    <input type="date" name ="Перша дата" id="firstDate"/> <br>
-                    <input type="date" name ="Друга дата" id="secondDate"/> <br>
+                    <label>Від:<br><input type="date" name ="Перша дата" id="firstDate"/> </label><br>
+                    <label>До: <br><input type="date" name ="Друга дата" id="secondDate"/> </label><br>
+
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-default" id="showConcertsByDate" ng-click="concertHallCtrl.showConcertsByDate()" data-dismiss="modal">Вивести</button>
+                    <button class="btn btn-default" id="selectDatesBtn" ng-click="culturePalaceCtrl.selectDates()" data-dismiss="modal">Вивести</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
-
-        </div>
-    </div>
-
-    <div id="selectByCapacity" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Вибір місткості</h4>
-                </div>
-                <div class="modal-body">
-                    <input type="number" id="capacity"/>
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-default" id="showByCapacity" ng-click="concertHallCtrl.showByCapacity()" data-dismiss="modal">Вивести</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
-                </div>
-            </div>
-
         </div>
     </div>
 
@@ -170,7 +144,8 @@
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.js"></script>
 <script type="text/javascript" src="js/angular.min.js"></script>
-<script type="text/javascript" src="js/concert_hall.js"></script>
+<script type="text/javascript" src="js/contest_dates.js"></script>
+<script type="text/javascript" src="js/onclose.js"></script>
 
 </body>
 </html>
