--- a/src/main/resources/public/contest_in_palace.html
+++ b/src/main/resources/public/contest_in_palace.html
@@ -18,7 +18,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">Конкурси</button>
                         <div class="dropdown-content">
-                            <a href ="title.html">Титульна сторінка</a>
+                            <a href ="index.html">Титульна сторінка</a>
                             <a href="artist.html">Артисти</a>
                             <a href ="artist_genre.html">Жанри артиста</a>
                             <a href ="artist_and_impresario.html">Імпресаріо артистів</a>
@@ -51,7 +51,7 @@
             <tr>
                 <th>&#128273ІД</th>
                 <th>Назва</th>
-                <th>Концертна площадка</th>
+                <th>Палац культури</th>
                 <th>Організатор</th>
                 <th>Дата</th>
                 <th class="headerWidth"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal"
