--- a/src/main/resources/public/culture_palace.html
+++ b/src/main/resources/public/culture_palace.html
@@ -18,7 +18,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">Палаци культури</button>
                         <div class="dropdown-content">
-                            <a href ="title.html">Титульна сторінка</a>
+                            <a href ="index.html">Титульна сторінка</a>
                             <a href="artist.html">Артисти</a>
                             <a href ="artist_genre.html">Жанри артиста</a>
                             <a href ="artist_and_impresario.html">Імпресаріо артистів</a>
@@ -39,6 +39,7 @@
                         <button class="dropbtn" style="margin-left: 0">Запити</button>
                         <div style="min-width: 400px;" class="dropdown-content">
                             <a href="" data-toggle="modal" data-target="#selectByCapacity">Список палаців із вказаною місткістю (більше або дорівнює)</a>
+                            <a href="contest_dates.html" >Список палаців та дати проведення в них заходів протягом вказаного періоду</a>
                         </div>
                     </div>
                 </div>
