--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Титульна сторінка</title>
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
+<div align="center" style="width: 100%" class="wrapper">
 <h4 style="text-align: center; font-weight: bold; font-size: 14px;">
     Міністерство освіти і науки України<br>
     Чернівецький національний університет імені Юрія Федьковича<br>
@@ -100,7 +103,29 @@
 <p align = "center" style="font-size: 12px">Чернівці–20
     <span style="text-decoration: underline">18</span></p>
 
+<br><br>
 
+<div style="font-family: Arial" class="dropdown">
+    <button style="width: 480px" class="dropbtn">Таблиці</button>
+    <div style="width: 480px" class="dropdown-content">
+        <a href ="artist.html">Артисти</a>
+        <a href ="artist_genre.html">Жанри артиста</a>
+        <a href ="artist_and_impresario.html">Імпресаріо артистів</a>
+        <a href ="cinema.html">Кінотеатри</a>
+        <a href ="cinema_movies.html">Фільми</a>
+        <a href ="concert_hall.html">Концертні площадки</a>
+        <a href ="concert_in_hall.html">Концерти</a>
+        <a href ="contest_in_palace.html">Конкурси</a>
+        <a href ="contest_results.html">Результати конкурсів</a>
+        <a href ="culture_palace.html">Палаци культури</a>
+        <a href ="impresario.html">Імпресаріо</a>
+        <a href ="impresario_and_genre.html">Жанри імпресаріо</a>
+        <a href ="organizer.html">Організатори</a>
+        <a href ="theatre.html">Театри</a>
+        <a href ="theatre_performance.html">Виступи</a>
+    </div>
+</div>
+</div>
 
 </body>
 </html>
