--- a/src/main/resources/public/theatre.html
+++ b/src/main/resources/public/theatre.html
@@ -17,7 +17,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">Театри</button>
                         <div class="dropdown-content">
-                            <a href ="title.html">Титульна сторінка</a>
+                            <a href ="index.html">Титульна сторінка</a>
                             <a href="artist.html">Артисти</a>
                             <a href ="artist_genre.html">Жанри артиста</a>
                             <a href ="artist_and_impresario.html">Імпресаріо артистів</a>
@@ -38,6 +38,7 @@
                         <button class="dropbtn" style="margin-left: 0">Запити</button>
                         <div style="min-width: 400px;" class="dropdown-content">
                             <a href="" data-toggle="modal" data-target="#selectByCapacity">Список театрів із вказаною місткістю (більше або дорівнює)</a>
+                            <a href="theatre_dates.html" >Список театрів та дати проведення в них заходів протягом вказаного періоду</a>
                         </div>
                     </div>
                 </div>
